# Backend-Python

APIs/hello-world/: pyproject.toml
APIs/hello-world/hello_world/: main.py
APIs/todo-app/todoapp/: .env  pyproject.toml
APIs/todo-app/todoapp/todo_app/: main.py
Docker/containerize fastapi codebase/backend_code/: Dockerfile  pyproject.toml
Docker/containerize fastapi codebase/backend_code/backend_code/: main.py
Docker/dev cont/: Dockerfile  compose.yaml
Docker/docker compose/: Dockerfile  compose.yaml
Modern Python/Dictionary, set, tuple, dictionary comprehensive/: index.ipynb
Modern Python/datetime/: main.py
Modern Python/if-else-elif, tuple, zip/: lec6.ipynb  lec6.py
Modern Python/list/: index.ipynb
Modern Python/list tuple or list comprehension/: Untitled.ipynb
Modern Python/list tuple or list comprehension/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Modern Python/operator/: index.ipynb  index.py
Modern Python/string/: index.ipynb
assignment/: Muhammad Talha.pptx
kafka/: compose.yml  note.txt
oauth/auth/auth_service/: Dockerfile  pyproject.toml
oauth/auth/auth_service/auth_service/: main.py
